fixe: z-index header and main paddint to top

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   color: black;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
 }
 
@@ -14,8 +14,13 @@ footer,
 }
 
 header {
+  z-index: 1;
   position: fixed;
   width: 100%;
+}
+
+main {
+  padding-top: 70px;
 }
 
 header .container {
@@ -28,16 +33,15 @@ header .container {
   }
 }
 
-main {
-  padding-top: 2.75%;
-}
-
-h1, h2 {
+h1,
+h2 {
   font-family: "Montserrat", sans-serif;
 }
 
-input, p, em {
-  font-family: 'Rajdhani', sans-serif;
+input,
+p,
+em {
+  font-family: "Rajdhani", sans-serif;
 }
 
 a:hover {
@@ -66,7 +70,7 @@ form {
 }
 
 .container {
-  max-width: 1360px;
+  max-width: 1280px;
   width: 100vw;
   margin: 0 auto;
   padding: 1%;
